--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -26,8 +26,8 @@ comments:
   # You can get your appid and appkey from https://leancloud.cn
   # 这里appId和appKey一定一定要改成自己的，没有的话去https://leancloud.cn这个网站注册创建一个
   valine:
-    appId: wKNKQ6xM9g258SoWOIq708Ns-9Nh9j0Va
-    appKey: wFYeFlMLUkwPOneb56EWORoS
+    appId: 
+    appKey: 
     avatar: hide
     placeholder: We are all stories in the end.
     notify: true
@@ -62,7 +62,7 @@ aplayer:
 beian: 
 
 # 谷歌分析
-google_analytics: G-V0QV2QH739
+google_analytics: 
 # gauges分析
 gauges_analytics: 
 # 百度分析
