--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /node_modules
 #themes/node_modules
 #themes/plubic
+source/23129519/rec/
+source/23129519/ShipVoice/
+source/23129519/rec/
+source/22870039/
+source/23021862/
