--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -5,8 +5,8 @@ menu:
 
 # 主页banner图
 banner: /index.jpg
-notice: 服务器已迁移至东京，延迟可能增高
-# notice: 高橋はるき&狐日泽.2022-05.
+notice: 服务器已迁移回香港，延迟可能略有降低
+# notice: 高橋はるき&狐日泽.2022-10.
 
 # 作者信息
 author:
@@ -26,8 +26,8 @@ comments:
   # You can get your appid and appkey from https://leancloud.cn
   # 这里appId和appKey一定一定要改成自己的，没有的话去https://leancloud.cn这个网站注册创建一个
   valine:
-    appId: 
-    appKey: 
+    appId: wKNKQ6xM9g258SoWOIq708Ns-9Nh9j0Va
+    appKey: wFYeFlMLUkwPOneb56EWORoS
     avatar: hide
     placeholder: We are all stories in the end.
     notify: true
